fix(style): set nav z-index to 1000
This ensures the nav element is ALWAYS above all other elements. Prior
to this commit, the navbar ended up under images effectively hiding it.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -104,6 +104,8 @@ nav {
   border-left-color: var(--sumiInk3);
   border-bottom-left-radius: 10px;
   /* Set the navbar to have highest priority so it shows above all other elements */
+  z-index: 1000;
+}
 }
 
 nav a:link,
